@@ -1,3 +1,8 @@
+Sat Oct 10 18:35:12 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* vm_insnhelper.c (vm_call_method0): do not propagate enable_fastpath,
+	  but pass dummy CC to prevent wrong caching.
+
 Sat Oct 10 15:28:45 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* import a github pull request
